Port Dealmaker Core to Forge 1.20.1